# jirashell

./: README.md  pyproject.toml
.github/workflows/: publish.yml
jirashell/: cli.py  client.py
