[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jirashell"
version = "0.1.2"
description = "Interactive Jira CLI — navigate epics, tickets, transitions and comments from your terminal"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Maksim", email = "eng.maksim@gmail.com"}]
requires-python = ">=3.10"
dependencies = ["requests"]
keywords = ["jira", "cli", "atlassian", "terminal", "devtools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.scripts]
jirashell = "jirashell.cli:main"
